add matt's ggplot version of plot_mvgam_series; add patchwork to imports and update docs

--- a/index.Rmd
+++ b/index.Rmd
@@ -44,19 +44,20 @@ See `??mvgam_families` for more information. Below is a simple example for simul
 library(mvgam)
 ```
 
-```{r, eval = FALSE}
+```{r}
+set.seed(100)
 data <- sim_mvgam(family = betar(),
                   T = 80,
                   trend_model = GP(),
-                  trend_rel = 0.5, 
+                  prop_trend = 0.5, 
                   seasonality = 'shared')
 ```
 
 Plot the series to see how they evolve over time
-```{r, eval = FALSE}
+```{r}
 plot_mvgam_series(data = data$data_train, series = 'all')
 ```
-![Simulating and analysing multivariate time series with Dynamic Generalized Additive Models](man/figures/README-beta_sim-1.png)
+
 
 Fit a State-Space GAM to these series that uses a hierarchical cyclic seasonal smooth term to capture variation in seasonality among series. The model also includes series-specific latent Gaussian Processes with squared exponential covariance functions to capture temporal dynamics
 ```{r, eval = FALSE}
