--- a/README.Rmd
+++ b/README.Rmd
@@ -125,8 +125,7 @@ lynx_mvgam <- mvgam(data = lynx_train,
                knots = list(season = c(0.5, 19.5)),
                family = poisson(),
                trend_model = AR(p = 1),
-               noncentred = TRUE,
-               use_stan = TRUE)
+               noncentred = TRUE)
 ```
 
 ```{r, eval=FALSE}
@@ -213,7 +212,7 @@ text(1, 0.8, cex = 1.5, label = "Trend component",
      pos = 4, col = "#7C0000", family = 'serif')
 ```
 
-Both components contribute to forecast uncertainty. Diagnostics of the model can also be performed using `mvgam`. Have a look at the model's residuals, which are posterior empirical quantiles of Dunn-Smyth randomised quantile residuals so should follow approximate normality. We are primarily looking for a lack of autocorrelation, which would suggest our AR1 model is appropriate for the latent trend
+Both components contribute to forecast uncertainty. Diagnostics of the model can also be performed using `mvgam`. Have a look at the model's residuals, which are posterior medians of Dunn-Smyth randomised quantile residuals so should follow approximate normality. We are primarily looking for a lack of autocorrelation, which would suggest our AR1 model is appropriate for the latent trend
 ```{r, fig.width=6.5, fig.height=6.5, dpi=160, fig.alt = "Plotting Dunn-Smyth residuals for time series analysis in mvgam and R"}
 plot(lynx_mvgam, type = 'residuals')
 ```
