--- a/index.Rmd
+++ b/index.Rmd
@@ -72,10 +72,14 @@ mod <- mvgam(y ~ s(season, bs = 'cc', k = 7) +
 
 Plot the estimated posterior hindcast and forecast distributions for each series
 ```{r eval = FALSE}
-layout(matrix(1:4, nrow = 2, byrow = TRUE))
-for(i in 1:3){
-  plot(mod, type = 'forecast', series = i)
-}
+library(patchwork)
+fc <- forecast(mod)
+wrap_plots(
+  plot(fc, series = 1), 
+  plot(fc, series = 2), 
+  plot(fc, series = 3), 
+  ncol = 2
+)
 ```
 
 ![Forecasting multivariate time series with Dynamic Generalized Additive Models](man/figures/README-beta_fc-1.png)
