--- a/README.Rmd
+++ b/README.Rmd
@@ -189,7 +189,6 @@ draw(lynx_mvgam)
 
 As for many types of regression models, it is often more useful to plot model effects on the outcome scale. `mvgam` has support for the wonderful `marginaleffects` package, allowing a wide variety of posterior contrasts, averages, conditional and marginal predictions to be calculated and plotted. Below is the conditional effect of season plotted on the outcome scale, for example:
 ```{r, fig.alt = "Using marginaleffects and mvgam to plot GAM smooth functions in R"}
-require(ggplot2); require(marginaleffects)
 plot_predictions(lynx_mvgam, condition = 'season', points = 0.5) +
   theme_classic()
 ```
@@ -215,12 +214,28 @@ text(1, 0.8, cex = 1.5, label = "Trend component",
      pos = 4, col = "#7C0000", family = 'serif')
 ```
 
-Both components contribute to forecast uncertainty. Diagnostics of the model can also be performed using `mvgam`. Have a look at the model's residuals, which are posterior medians of Dunn-Smyth randomised quantile residuals so should follow approximate normality. We are primarily looking for a lack of autocorrelation, which would suggest our AR1 model is appropriate for the latent trend
+Both components contribute to forecast uncertainty. Diagnostics of the model can also be performed using `mvgam`. Have a look at the model's residuals, which are posterior distributions of Dunn-Smyth randomised quantile residuals so should follow approximate normality. We are primarily looking for a lack of autocorrelation, which would suggest our AR1 model is appropriate for the latent trend
 ```{r, fig.width=6.5, fig.height=6.5, dpi=160, fig.alt = "Plotting Dunn-Smyth residuals for time series analysis in mvgam and R"}
 plot(lynx_mvgam, type = 'residuals')
 ```
 
-We can use the `how_to_cite()` function to generate a scaffold for describing the model and sampling details in scientific communications
+`pp_check()` can also be used to further investigate these residuals. For example, we can plot them against `season` to look for any systematic patterns in the model's errors
+```{r, fig.alt = "Plotting Dunn-Smyth residuals for time series analysis in mvgam and R"}
+pp_check(lynx_mvgam, 
+         x = "season",
+         type = "resid_ribbon",
+         ndraws = 100)
+```
+
+Or we can also plot them against `time`
+```{r, fig.alt = "Plotting Dunn-Smyth residuals for time series analysis in mvgam and R"}
+pp_check(lynx_mvgam, 
+         x = "time",
+         type = "resid_ribbon",
+         ndraws = 100)
+```
+
+Use the `how_to_cite()` function to generate a scaffold for describing the model and sampling details in scientific communications
 ```{r}
 description <- how_to_cite(lynx_mvgam)
 ```
